fix: add button not aligned well

--- a/src/main/frontend/components/page.css
+++ b/src/main/frontend/components/page.css
@@ -72,3 +72,7 @@
     .bullet-container.cursor) {
   cursor: e-resize;
 }
+
+.add-button-link {
+    margin-left: 8px;
+}
